Modificado scrollbars para chrome. fixed #7
Foi retirado o scrollbar estilizado para chrome devidos ao vários
problemas relatados.

--- a/_css/source/style.scss
+++ b/_css/source/style.scss
@@ -20,18 +20,19 @@ button::-moz-focus-inner, input::-moz-focus-inner {border: 0;}
 
 /* BASIC DEF
 =============================*/
-html {height:100%;}
-body { font-family:Verdana, Geneva, sans-serif; font-size:11px; color:#666; height:100%; background:url(../_img/backgrounds/body.jpg) repeat-x center top white; background-attachment:scroll;}
+html {/*height:100%; overflow-y: auto; background-color: transparent;*/}
+body { font-family:Verdana, Geneva, sans-serif; font-size:11px; color:#666; /*height:100%; position: absolute; top: 0; left: 0; bottom: 0; right: 0; overflow-y: scroll; overflow-x: hidden;*/}
+#scrollableBody {background:url(../_img/backgrounds/body.jpg) repeat-x center top white; background-attachment:scroll;}
 @font-face {font-family:Sketch; src:url('SketchFlowPrint.ttf');}
 
-/* Scrollbars in Chrome */
-body::-webkit-scrollbar {width:10px; height:100%; border-left:1px solid #CCC; background:#F7F7F7;}
-body::-webkit-scrollbar:hover {background:#e5e5e5;}
-body::-webkit-scrollbar-button:start:decrement,
-body::-webkit-scrollbar-button:end:increment  {height: 30px; display: none; background-color: transparent;}
-body::-webkit-scrollbar-track-piece  {background-color: rgba(255,255,255,.5);}
-body::-webkit-scrollbar-thumb:vertical {height:50px; background-color: rgba(115,168,192,.3); -webkit-border-radius:3px; -webkit-transition:all 200ms ease-in-out;}
-body::-webkit-scrollbar-thumb:vertical:hover {background-color: rgba(115,168,192,.6);}
+/* Scrollbars in Chrome 
+::-webkit-scrollbar {width:10px; height:100%; border-left:1px solid #CCC; background:#F7F7F7;}
+::-webkit-scrollbar:hover {background:#e5e5e5;}
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment  {height: 30px; display: none; background-color: transparent;}
+::-webkit-scrollbar-track-piece  {background-color: rgba(255,255,255,.5);}
+::-webkit-scrollbar-thumb:vertical {height:50px; background-color: rgba(115,168,192,.3); -webkit-border-radius:3px; -webkit-transition:all 200ms ease-in-out;}
+::-webkit-scrollbar-thumb:vertical:hover {background-color: rgba(115,168,192,.6);}*/
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {font-weight: bold;}
